# judo

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: docs.doctree  environment.pickle  faq.doctree  index.doctree  quickstart.doctree
.doctrees/api/: index.doctree
.doctrees/api/judo/: index.doctree
.doctrees/api/judo/app/: index.doctree
.doctrees/api/judo/cli/: index.doctree
.doctrees/api/judo/config/: index.doctree
.doctrees/api/judo/controller/: index.doctree
.doctrees/api/judo/gui/: index.doctree
.doctrees/api/judo/optimizers/: index.doctree
.doctrees/interface/: config_registration.doctree  config_with_hydra.doctree  gui.doctree  index.doctree  intro.doctree  optimizers.doctree  overrides.doctree  tasks.doctree
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  docs.yml  precommit.yml  pypi_publish.yml  test.yml
.hooks/: python_headers.py
_modules/: index.html
_modules/judo/cli/: index.html
_modules/judo/config/: index.html
_modules/judo/gui/: index.html
_modules/judo/optimizers/: index.html
_modules/judo/tasks/: index.html
_sources/: faq.md.txt
_sources/api/: index.rst.txt
_sources/api/judo/: index.rst.txt
_sources/interface/: index.rst.txt
_static/css/: compact_table_header.css
api/: index.html
api/judo/: index.html
api/judo/app/: index.html
api/judo/cli/: index.html
api/judo/config/: index.html
api/judo/controller/: index.html
api/judo/gui/: index.html
api/judo/optimizers/: index.html
api/judo/tasks/: index.html
api/judo/utils/: index.html
api/judo/visualizers/: index.html
docs/: Makefile  index.html  requirements.txt
docs/source/: conf.py  docs.md  index.md  quickstart.md
docs/source/interface/: config_registration.md  config_with_hydra.md  gui.md  intro.md  optimizers.md  overrides.md  tasks.md
example_configs/: example.yaml
faq/: index.html
genindex/: index.html
interface/: index.html
interface/config_registration/: index.html
interface/config_with_hydra/: index.html
interface/gui/: index.html
interface/intro/: index.html
interface/optimizers/: index.html
interface/overrides/: index.html
interface/tasks/: index.html
judo/: __init__.py  cli.py  config.py  gui.py
judo/app/: __init__.py  benchmark.py  controller.py  simulation.py  structs.py  utils.py  visualization.py
judo/configs/: benchmark_default.yaml  judo_default.yaml
judo/controller/: __init__.py  controller.py  overrides.py
judo/examples/: example_optimizer.py  example_task.py
judo/models/xml/: README.md  caltech_leap_cube.xml  caltech_leap_cube_sim.xml  cartpole.xml  cylinder_push.xml  fr3_pick.xml  leap_cube.xml  leap_cube_palm_down.xml  leap_cube_palm_down_sim.xml  leap_cube_sim.xml
judo/optimizers/: __init__.py  base.py  cem.py  mppi.py  overrides.py  ps.py
judo/tasks/: README.md  __init__.py  base.py  caltech_leap_cube.py  cartpole.py  cost_functions.py  cylinder_push.py  fr3_pick.py  leap_cube.py  leap_cube_down.py
judo/utils/: assets.py  fields.py  math_utils.py  mujoco.py  normalization.py
judo/visualizers/: model.py  utils.py
models/xml/: acrobot.xml  allegro_scene_tilt_wrist.xml  allegro_scene_tilt_wrist_drake.xml  box_push.xml  box_push_2d.xml  cartpole.xml  cylinder_push.xml  floating_hand.xml  planar_hand.xml  spot_bimanual_stool.xml  spot_box.xml  spot_locomotion.xml  spot_lying_ball.xml  spot_standing_box.xml  spot_tire_rim.xml  spot_yellow_chair.xml
models/xml/allegro_components/: assets.xml  contacts_and_sensors.xml  fingers.xml  params_and_default.xml
models/xml/objects/: box_with_handle.xml  tire_rim.xml  tire_rim_defs.xml  yellow_chair.xml  yellow_chair_defs.xml
models/xml/spot_components/: actuators_sensors.xml  actuators_sensors_locomotion.xml  actuators_sensors_position_control.xml  arm.xml  arm_locomotion.xml  arm_primitive.xml  assets.xml  assets_locomotion.xml  ball.xml  box.xml  box_with_handle.xml  contact.xml  drake_box.xml  drake_box_with_handle.xml  drake_small_box.xml  fixed_hind_actuators_sensors.xml  fixed_hind_legs.xml  fixed_legs.xml  legs.xml  legs_locomotion.xml  lying_actuators_sensors.xml  params_and_default.xml  params_and_default_locomotion.xml  small_box.xml  stool.xml
py-modindex/: index.html
quickstart/: index.html
search/: index.html
src/judo/common/: path_resolvers.py  paths.py
src/judo/controllers/: __init__.py  sampling_base.py
src/judo/mujoco_helpers/: utils.py
src/judo/tasks/: __init__.py  acrobot.py  cartpole.py  cost_functions.py  cylinder_push.py  mujoco_task.py  spot_base.py  task.py
src/judo/viser_app/: app.py  constants.py  gui.py  json_serializer.py  path_utils.py
src/judo/visualizers/: model.py  visualization.py
src/mujoco_extensions/: CMakeLists.txt  pyproject.toml
src/mujoco_extensions/cmake/: FindOrFetchDeps.cmake
src/mujoco_extensions/mujoco_extensions/onnx_interface/: onnx_interface.cpp  onnx_interface.h
src/mujoco_extensions/mujoco_extensions/pybind/: pybind.cpp
src/mujoco_extensions/mujoco_extensions/pybind/jacobian_smoothing/: jacobian_smoothing.cpp  pybind.cpp
src/mujoco_extensions/mujoco_extensions/pybind/policy_rollout/: policy_rollout.cpp  pybind.cpp
src/mujoco_extensions/mujoco_extensions/system/: eigen_types.cpp  eigen_types.h  system_class.cpp  system_class.h  system_utils.cpp  system_utils.h
src/mujoco_extensions/src/mujoco_extensions/jacobian_smoothing/: __init__.py
src/mujoco_extensions/src/mujoco_extensions/policy_rollout/: __init__.py
test/: test_einsum.py  test_linalg_utils.py  test_verification_paths.py
test/config/: box_push.yml  planar_hand.yml
test/dynamics/: test_gradients.py  test_mj_dynamics.py  test_sensor.py
test/planner/: planner_setup.py  test_action_sampler.py  test_graph.py  test_graph_worker.py  test_planner_examples.py
test/visualizers/: test_meshcat_visualizer.py  test_viser_app.py
tests/: conftest.py  test_config.py  test_visualizer.py
tests/test_controller/: test_action_normalization.py  test_controller.py
(+212 files in other folders)
