[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "mujoco-extensions"
version = "0.1.0"
description = "MuJoCo extensions with ONNX integration and Python bindings"
authors = [
    { name = "Preston Culbertson" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "onnxruntime==1.19.0",
    "mujoco==3.3.0",
]
